--- a/app/assets/i18n/lang-de.json
+++ b/app/assets/i18n/lang-de.json
@@ -6,6 +6,7 @@
 	"STARTUP_TITLE": "Willkommen",
 
 	"LOGIN_TITLE": "Anmelden",
+	"LOGOUT_TITLE": "Abmelden",
 
 	"SIGNUP_TITLE": "Registrieren",
 
@@ -38,6 +39,7 @@
 
 	"MSG_LOGIN_START": "Bitte mit Ihrer E-Mail Adresse und Passwort anmelden.",
 	"MSG_LOGIN_SUCCESS": "Hallo {{username}}, willkommen bei Simple Mobile Webapp",
+	"MSG_LOGOUT": "Hallo {{username}}, Sie verlassen nun den geschlossenen Bereich!",
 	"MSG_SIGNUP_START": "Bitte geben Sie Ihren Name, Ihre E-Mail Adresse und ein Passwort ein.",
 	"MSG_SIGNUP_AGB": "Die AGB zustimmen"
 }
